Fixed flicker on page load with ng-cloak

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+  /*fixes flicker issue before data is loaded */
+  [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+  }
+
   html, body{
     height: 100%;
     width: 100%;
